# mario-isn

./: .gitignore  CMakeLists.txt  CNAME  README.md  main.c
.github/workflows/: build-macos.yml
_old/: compilateur.bat
_old/img/: scratchthumbs.db
_old/include/Headers/: MARIO_conditions.h  MARIO_game.h  MARIO_musique.h
_old/others/: ressources.rc
_old/src/game/joueur/: animation.c  deplacement_joueur.c  niveau.c  saut_joueur.c
_old/src/game/mechant/: bowser.c  contact_mechant.c  deplacement_mechant.c  refresh_mechant.c
_old/src/menu/: MENU.c  init_menu.c
coin.exe/coin.exe/src/: coin.c
img/: MyIcon.icns
include/: MARIO_game.h  MARIO_mechant.h  MARIO_menu.h  MARIO_musique.h  MARIO_niveau.h  MARIO_quit.h  MARIO_variables.h  display.h
include/Headers/: MARIO_joueur.h  MARIO_mechant.h  MARIO_niveau.h  MARIO_variables.h
others/: CDCF.docx  PROJET ISN.docx
src/: display.c  main.c
src/game/: GAME.c  conditions.c  init_game.c
src/game/joueur/: animation.c  deplacement_joueur.c  music.c  niveau.c  saut_joueur.c
src/game/mechant/: addElem.c  bowser.c  contact_mechant.c  deplacement_mechant.c  refresh_mechant.c
src/menu/: MENU.c  init_menu.c
